--- a/over.html
+++ b/over.html
@@ -12,7 +12,7 @@
   />
 
   <title>
-     404: Page not found
+     Over mij
     &middot; tristanlukens 
   </title>
 
@@ -62,7 +62,7 @@
 
                     
       <a
-        class="sidebar-nav-item"
+        class="sidebar-nav-item active"
         href="/over.html/"
         >Over mij</a
       >
@@ -83,8 +83,25 @@
 
 
     <div class="content container"><div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="">Head back home</a> to try finding it again.</p>
+  <h1 class="page-title">Over mij</h1>
+  <p class="message">TODO: updaten + vertalen</p>
+
+<p>I’m nineteen years old, and from the Netherlands. I’ve been obsessed with drumming for over eleven years, have a soft spot for everything computers, and I’m currently a student in Chemical Engineering.</p>
+
+<p>My biggest love will however always be music — from collecting CDs to having seen dozens of live shows the past few years. My biggest playlist — the one which I am most passionate about — is my car music playlist (titled ‘My car, my rules, my music’), is public. Have a look!</p>
+
+<p>Aside from the big ass car playlist, I also made a public collaborative Spotify playlist where anyone can add anything they love. It’s right here. It’s also embedded into this page, under this wall of text.</p>
+
+<p>I’ve written a few thousand words about all kinds of things at articles. Most are in English, though some might be in Dutch.</p>
+
+<p>I initially built this site to publish drum covers, over at covers. You might know some songs I did. Have a look. After that, pop over to my Instagram, where I’ve also posted some of them.</p>
+
+<p>This might be the fifth version of this website (I’m not 100% sure). The previous one is still up, and can be found here. The old content (my old drum covers and blog posts) is there as well. A lot of things are very outdated there.</p>
+
+<p>One more thing before we wrap up: all the way at the bottom of this site is a quote. Hover over it to see who it’s from, and click to generate a new one.</p>
+
+<p>Cheers.</p>
+
 </div>
 </div>
   </body>
