--- a/over.html
+++ b/over.html
@@ -86,6 +86,8 @@
   <h1 class="page-title">Over mij</h1>
   <p class="message">TODO: updaten + vertalen</p>
 
+<p>boe (test)</p>
+
 <p>I’m nineteen years old, and from the Netherlands. I’ve been obsessed with drumming for over eleven years, have a soft spot for everything computers, and I’m currently a student in Chemical Engineering.</p>
 
 <p>My biggest love will however always be music — from collecting CDs to having seen dozens of live shows the past few years. My biggest playlist — the one which I am most passionate about — is my car music playlist (titled ‘My car, my rules, my music’), is public. Have a look!</p>
