--- a/over.html
+++ b/over.html
@@ -83,6 +83,11 @@
     </nav>
 
     <p>&copy; 2025 Tristan Lukens</p>
+    <small>
+      <p>Deze site gebruikt <a href="https://hyde.getpoole.com">Hyde</a>, een thema voor
+      <a href="https://jekyllrb.com">Jekyll</a></p>
+
+    </small>
   </div>
 </div>
 
