--- a/over.html
+++ b/over.html
@@ -94,23 +94,19 @@
 
     <div class="content container"><div class="page">
   <h1 class="page-title">Over mij</h1>
-  <p class="message">TODO: updaten + vertalen</p>
+  <p>Hey! Ik ben Tristan. Negentien jaar oud, kom uit Nederland. Al 11 jaar zie ik drummen als het mooiste dat er is, ik houd van computers, en studeer op het moment Chemische Technologie in Groningen.</p>
 
-<p>boe (test)</p>
+<p>Naast de talloze uren drummen, stop ik ook veel tijd in het luisteren van muziek. Ik verzamel ook cd’s, waarbij ik mijn collectie probeer bij te houden op <a href="https://www.discogs.com/user/tristanlukens/collection">Discogs</a>. De afgelopen jaren ben ik ook bij ontzettend veel concerten geweest, van Slipknot naar Queens of the Stone Age naar TesseracT naar Spiritbox. Goed geluid vind ik ook belangrijk — zo heb ik een set KEF LS50s staan. Er ligt ook nog een Tannoy Arena sub onder.</p>
 
-<p>I’m nineteen years old, and from the Netherlands. I’ve been obsessed with drumming for over eleven years, have a soft spot for everything computers, and I’m currently a student in Chemical Engineering.</p>
+<p>Mijn autoafspeellijst is openbaar op Spotify. <a href="https://open.spotify.com/playlist/2cDHvXSfJ1a9Jtq1Ki9MME?si=c646fd330685496b">Voel je vrij een kijkje te nemen ;)</a></p>
 
-<p>My biggest love will however always be music — from collecting CDs to having seen dozens of live shows the past few years. My biggest playlist — the one which I am most passionate about — is my car music playlist (titled ‘My car, my rules, my music’), is public. Have a look!</p>
+<p>Ik heb al zoveel versies van deze website gemaakt. Volgens mij is dit de zevende.</p>
 
-<p>Aside from the big ass car playlist, I also made a public collaborative Spotify playlist where anyone can add anything they love. It’s right here. It’s also embedded into this page, under this wall of text.</p>
+<p>Ik doe namelijk al een tijdje aan het programmeren — ik begon op mijn kleine iPad mini met Swift Playgrounds, een jaar of tien geleden. Toen ik eindelijk de optie kreeg met Xcode bezig te gaan, was ik erg fanatiek. Maar het hele apps maken werd wel een beetje vervelend. Xcode beviel ook niet lekker. Later ben ik begonnen met websites maken, eerst met alleen HTML en CSS, toen ook met JS en Svelte erbij.</p>
 
-<p>I’ve written a few thousand words about all kinds of things at articles. Most are in English, though some might be in Dutch.</p>
+<p>Ergens daartussen ben ik met Linux begonnen, en kreeg ik meer kennis over computers in het algemeen. Ondanks dat de ICT niet mijn werkveld is, beleef ik nog steeds plezier in het spelen met computers.</p>
 
-<p>I initially built this site to publish drum covers, over at covers. You might know some songs I did. Have a look. After that, pop over to my Instagram, where I’ve also posted some of them.</p>
-
-<p>This might be the fifth version of this website (I’m not 100% sure). The previous one is still up, and can be found here. The old content (my old drum covers and blog posts) is there as well. A lot of things are very outdated there.</p>
-
-<p>One more thing before we wrap up: all the way at the bottom of this site is a quote. Hover over it to see who it’s from, and click to generate a new one.</p>
+<p>Verder is mijn lievelingseten pasta, m’n lievelingsdier is de olifant (of de beer, kweenie man) en ik houd van autorijden. Ik doe tegenwoordig ook aan hardlopen, totdat ik de volgende onvermijdbare blessure oploop.</p>
 
 <p>Cheers.</p>
 
