--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-  <link href="http://gmpg.org/xfn/11" rel="profile" />
+  <link href="https://gmpg.org/xfn/11" rel="profile" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="/public/css/hyde.css" />
   <link
     rel="stylesheet"
-    href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"
+    href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"
   />
 
   <!-- Icons -->
